# cambio

./: .gitignore  README.md  agent.py  baseline.py  cambio.py  cambio_pygame.py  card_sim.py  dry_run_cpp.py  dry_run_python.py  generated_readme.md  layer.py  main.py  network.py  neuron.py  nn.py  nn_test.py  objectives.txt  player.py  player_testing.py  pygame.py  pygame_game.py  pygame_testing.py  train.py
cplusplus_env/: CMakeLists.txt  bindings.cpp  cambio.cpp  cambio.h  main  main.cpp  player.cpp  player.h
game_versions/: cambio_pygame.py
nn_values/: model_b0.npy  model_b1.npy  model_b2.npy  model_w0.npy  model_w1.npy  model_w2.npy
tests/: check_card_scores.py  unit_test_unknown_risk.py
